# libdarc

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: helpers.hpp
lib/: CMakeLists.txt
lib/include/: darc.hpp  darctool.hpp  helpers.hpp  utf.hpp
lib/sources/: darc.cpp  darctool.cpp  helpers.cpp  internal.hpp  main.cpp  utf.cpp
sources/: helpers.cpp  main.cpp
